Fix button alignment, hide login link

--- a/css/btn-add-style.css
+++ b/css/btn-add-style.css
@@ -8,7 +8,7 @@
     height: 4em;
 
     position: absolute;
-    right: 2em;
+    right: 3em;
     bottom: 3em;
 
     text-align: center;
@@ -26,3 +26,15 @@
     background-color: #dc3545;
     color: white;
 }
+
+@media screen and (max-width:1100px) {
+    #btn-add {
+      /* left: 27vw; */
+    }
+}
+
+@media screen and (max-width:900px) {
+    #btn-add {
+        right: 6vw;
+      }
+  }
