--- a/css/btn-center-style.css
+++ b/css/btn-center-style.css
@@ -8,7 +8,7 @@
     height: 4em;
 
     position: absolute;
-    left: 25vw;
+    left: 27vw;
     bottom: 3em;
 
     text-align: center;
@@ -41,13 +41,13 @@
 
 @media screen and (max-width:1100px) {
     #btn-center {
-      left: 38vw;
+      left: 27vw;
     }
 }
 
 @media screen and (max-width:900px) {
     #btn-center {
-        left: 6vw;
+        left: 6.4vw;
       }
   }
 
